<resources>
    <string name="app_name">Empresa ATM Consultoria</string>
    <string name="empresa_sobre">Sobre a Empresa</string>
    <string name="Servicos">Serviços</string>
    <string name="consultoria">Consultoria</string>
    <string name="others">...</string>
    <string name="processos">Processos</string>
    <string name="acompanhamento">Acompanhamento de Projetos</string>
    <string name="clientes">Clientes</string>
    <string name="cliente">Nossos Clientes</string>
    <string name="sys">Empresa de Desenvolvimento de Sistemas</string>
    <string name="system">Empresa de desenvolvimento de sistemas</string>
    <string name="rsm">Empresa de Auditoria</string>
    <string name="contato">Contato</string>
    <string name="email">Email: consultoria@atm.com.br</string>
    <string name="telefone">Telefone: (11) 3333-2222</string>
    <string name="celular">Celular: (11) 9999-8888</string>
    <string name="celular_movel">Celular: (11) 9999-8888</string>
</resources>
