<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientesActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="43dp"
        app:srcCompat="@drawable/detalhe_cliente" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="214dp"
        app:srcCompat="@drawable/cliente1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginBottom="135dp"
        app:srcCompat="@drawable/cliente2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_toEndOf="@+id/imageView4"
        android:text="@string/cliente"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="344dp"
        android:layout_height="34dp"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:text="@string/system"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginBottom="100dp"
        android:text="@string/rsm"
        android:textSize="18sp" />
</RelativeLayout>